# drawtest

./: .gitignore  CMakeLists.txt  CMakeLists.txt.windows  README.md  drawtest  environments.txt
app/render/: render.c
include/: app.h  vector.h
include/datastructures/: linked_list.h
include/environment/: environment.h  models.h  tick.h
include/interfaces/: inputs.h  renderer.h  timing.h
include/render/: render.h
media/: 2022-01-30 03-16-15.mkv  2022-01-30 16-28-56.mkv
src/: main.c  vector.c
src/datastructures/: linked_list.c
src/environment/: environment.c  models.c  tick.c
src/interfaces/: inputs.c  renderer.c  timing.c
src/render/: render.c
